--- a/week4__neural_networks.ipynb
+++ b/week4__neural_networks.ipynb
@@ -475,7 +475,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mzxX583yL9hG",
-        "outputId": "bd339f43-f8ad-4377-ec4d-173368e9fb49"
+        "outputId": "a377ec66-ad5f-47d5-d163-f1fc0e448727"
       },
       "outputs": [
         {
@@ -525,7 +525,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_IUm1DLwL9hW",
-        "outputId": "fa469523-0719-4eda-93cb-306e25778e5b"
+        "outputId": "1e47bc72-fa01-4dda-a901-470c98cb1dac"
       },
       "outputs": [
         {
@@ -622,6 +622,28 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "from sklearn.preprocessing import StandardScaler\n",
+        "from sklearn.preprocessing import MinMaxScaler\n",
+        "\n",
+        "scaler = StandardScaler()\n",
+        "# keep our unscaled features just in case we need to process them alternatively\n",
+        "actor25_features_scaled = actor25_features\n",
+        "actor25_features_scaled = scaler.fit_transform(actor25_features_scaled)\n",
+        "\n",
+        "scaler = MinMaxScaler()\n",
+        "# keep our unscaled features just in case we need to process them alternatively\n",
+        "actor25_features_minmax = actor25_features\n",
+        "actor25_features_minmax = scaler.fit_transform(actor25_features_minmax)"
+      ],
+      "metadata": {
+        "id": "sECUPouc_396"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "r4ATx5oNL9hX"
@@ -638,7 +660,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mlRuHQkKL9hX",
-        "outputId": "a2b5a392-f22c-4b55-b090-66d9988e30c8"
+        "outputId": "84fc82ce-4d5a-4464-f3cb-66a469c5a714"
       },
       "outputs": [
         {
@@ -837,7 +859,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FtpfgH_eL9hj",
-        "outputId": "89466839-ee8d-49a6-f7d2-bb67cc0039d8"
+        "outputId": "fb466a3e-f834-4154-a26b-e8ecfe31707e"
       },
       "outputs": [
         {
@@ -2038,7 +2060,7 @@
       "execution_count": null,
       "metadata": {
         "id": "y6uw8jnnL9hn",
-        "outputId": "ffdc5a0e-544a-4d96-d404-c823988264ea",
+        "outputId": "42f8996a-2943-4aad-e1ae-d65703684ca5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2048,8 +2070,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "MLP Model's accuracy on training set is 99.74%\n",
-            "MLP Model's accuracy on test set is 63.32%\n"
+            "MLP Model's accuracy on training set is 100.00%\n",
+            "MLP Model's accuracy on test set is 19.03%\n",
+            "MLP Model's accuracy on Actor 25 test set is 0.00%\n"
           ]
         }
       ],
@@ -2073,52 +2096,9 @@
         "print(f'MLP Model\\'s accuracy on training set is {100*model.score(X_train, y_train):.2f}%')\n",
         "# As we're done with hyperparameter tuning, we can check accuracy on test set\n",
         "# Note that, up to this point, we did not touch the test set at all\n",
-        "print(f'MLP Model\\'s accuracy on test set is {100*model.score(X_test, y_test):.2f}%')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "#test on scaled actor 25 to print(f'MLP Model\\'s accuracy on test set is {100*model.score(X_test, y_test):.2f}%')\n",
+        "print(f'MLP Model\\'s accuracy on test set is {100*model.score(X_test, y_test):.2f}%')\n",
         "\n",
-        "# Now we know best parameters from the Hyperparameter tuning\n",
-        "# We can use them for the final model\n",
-        "model = MLPClassifier(\n",
-        "    activation='relu',\n",
-        "    solver='adam', #stops training when getting overfitting\n",
-        "    alpha=0.001,\n",
-        "    batch_size=256,\n",
-        "    hidden_layer_sizes=(300,),\n",
-        "    learning_rate='adaptive',\n",
-        "    max_iter=1000, # I've found for this task, loss converges at ~1000 iterations (each sigle file getting visited, if visited too much --> overfitting)\n",
-        "    random_state=42,\n",
-        ")\n",
-        "\n",
-        "# In the final model, we can use the whole training dataset\n",
-        "model.fit(X_train, y_train)\n",
-        "\n",
-        "print(f'MLP Model\\'s accuracy on training set is {100*model.score(X_train, y_train):.2f}%')\n",
-        "# As we're done with hyperparameter tuning, we can check accuracy on test set\n",
-        "# Note that, up to this point, we did not touch the test set at all\n",
-        "print(f'MLP Model\\'s accuracy on test set is {100*model.score(actor25_X_test, actor25_y_test):.2f}%')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "Qj0-nC872muW",
-        "outputId": "e21defbb-9af0-4077-e058-65fa10915630"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "MLP Model's accuracy on training set is 100.00%\n",
-            "MLP Model's accuracy on test set is 0.00%\n"
-          ]
-        }
+        "print(f'MLP Model\\'s accuracy on Actor 25 test set is {100*model.score(actor25_X_test, actor25_y_test):.2f}%')"
       ]
     },
     {
