--- a/week4__neural_networks.ipynb
+++ b/week4__neural_networks.ipynb
@@ -812,26 +812,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "from sklearn.model_selection import train_test_split\n",
-        "\n",
-        "\n",
-        "############# Unscaled test/train set #############\n",
-        "X_train, actor25_X_test, y_train, actor25_y_test = train_test_split(\n",
-        "    actor25_features,\n",
-        "    actor25_emotions,\n",
-        "    test_size=0.2,\n",
-        "    random_state=42\n",
-        ")"
-      ],
-      "metadata": {
-        "id": "C9Lm9hWu4Led"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "Hk83NEWf_-_M"
@@ -2060,7 +2040,7 @@
       "execution_count": null,
       "metadata": {
         "id": "y6uw8jnnL9hn",
-        "outputId": "42f8996a-2943-4aad-e1ae-d65703684ca5",
+        "outputId": "bb25006a-16e6-401d-a464-02ec8f5ed8fb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -2070,9 +2050,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "MLP Model's accuracy on training set is 100.00%\n",
-            "MLP Model's accuracy on test set is 19.03%\n",
-            "MLP Model's accuracy on Actor 25 test set is 0.00%\n"
+            "MLP Model's accuracy on training set is 71.53%\n",
+            "MLP Model's accuracy on test set is 46.71%\n",
+            "MLP Model's accuracy on Actor 25 test set is 25.00%\n"
           ]
         }
       ],
@@ -2098,7 +2078,7 @@
         "# Note that, up to this point, we did not touch the test set at all\n",
         "print(f'MLP Model\\'s accuracy on test set is {100*model.score(X_test, y_test):.2f}%')\n",
         "\n",
-        "print(f'MLP Model\\'s accuracy on Actor 25 test set is {100*model.score(actor25_X_test, actor25_y_test):.2f}%')"
+        "print(f'MLP Model\\'s accuracy on Actor 25 test set is {100*model.score(actor25_features_scaled, actor25_emotions):.2f}%')"
       ]
     },
     {
